[gd_scene load_steps=22 format=3 uid="uid://bqj5beox7atc5"]

[ext_resource type="Theme" uid="uid://cqid6eqdw6f54" path="res://scenes/ui/ui.tres" id="1_0mwgc"]
[ext_resource type="Script" uid="uid://b60n3csy1oq4y" path="res://scenes/ui/gameplay/hud.gd" id="1_hqnrr"]
[ext_resource type="Texture2D" uid="uid://ce5uu5lcikxbs" path="res://assets/graphics/player/lasso.png" id="3_74lpp"]
[ext_resource type="Texture2D" uid="uid://7j01dnb6gy32" path="res://assets/graphics/powerups/upgrades/speed.png" id="3_a4wg4"]
[ext_resource type="Texture2D" uid="uid://c8q13fys2okwv" path="res://assets/graphics/powerups/upgrades/animal_stun_time.png" id="4_65qlr"]
[ext_resource type="Texture2D" uid="uid://dnm077e1rstjt" path="res://assets/graphics/powerups/upgrades/lasso_reach.png" id="5_e3pce"]
[ext_resource type="Texture2D" uid="uid://dlf42s27346ri" path="res://assets/graphics/powerups/upgrades/lasso_length.png" id="6_38tne"]
[ext_resource type="Texture2D" uid="uid://cnosyk6vb26po" path="res://assets/graphics/powerups/upgrades/kick_power.png" id="7_a3q0n"]

[sub_resource type="Shader" id="Shader_a4wg4"]
resource_local_to_scene = true
code = "shader_type canvas_item;

// --- Uniforms --- //
uniform bool weighted = true;	// Determines whether to use normal or weighted averages
uniform bool enabled = true;
void fragment() {
	if (enabled) {
		COLOR.rgb = mix(vec3((COLOR.r + COLOR.g + COLOR.b) / 3.0),  vec3(0.299 * COLOR.r + 0.587 * COLOR.g + 0.114 * COLOR.b), float(weighted));
	}	
}"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_e3pce"]
resource_local_to_scene = true
shader = SubResource("Shader_a4wg4")
shader_parameter/weighted = true
shader_parameter/enabled = true

[sub_resource type="ShaderMaterial" id="ShaderMaterial_65qlr"]
resource_local_to_scene = true
shader = SubResource("Shader_a4wg4")
shader_parameter/weighted = true
shader_parameter/enabled = true

[sub_resource type="ShaderMaterial" id="ShaderMaterial_38tne"]
resource_local_to_scene = true
shader = SubResource("Shader_a4wg4")
shader_parameter/weighted = true
shader_parameter/enabled = true

[sub_resource type="ShaderMaterial" id="ShaderMaterial_a3q0n"]
resource_local_to_scene = true
shader = SubResource("Shader_a4wg4")
shader_parameter/weighted = true
shader_parameter/enabled = true

[sub_resource type="ShaderMaterial" id="ShaderMaterial_kffq2"]
resource_local_to_scene = true
shader = SubResource("Shader_a4wg4")
shader_parameter/weighted = true
shader_parameter/enabled = true

[sub_resource type="ImageTexture" id="ImageTexture_xsw5n"]

[sub_resource type="ImageTexture" id="ImageTexture_74lpp"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_7tk7y"]
texture = ExtResource("3_74lpp")
axis_stretch_horizontal = 1

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_xsw5n"]
texture = ExtResource("3_74lpp")
axis_stretch_horizontal = 1

[sub_resource type="Animation" id="Animation_74lpp"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:theme_override_colors/font_color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_ixd2n"]
resource_name = "time_running_out"
length = 2.0
loop_mode = 2
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [-0.0872665, 0.0872665, -0.0872665]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 2
tracks/1/loop_wrap = false
tracks/1/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.2, 1.2), Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:theme_override_colors/font_color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.89129, 5.84789e-06, 0, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7tk7y"]
_data = {
&"RESET": SubResource("Animation_74lpp"),
&"time_running_out": SubResource("Animation_ixd2n")
}

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_hqnrr")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme = ExtResource("1_0mwgc")

[node name="ColorRect" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 108.0
grow_horizontal = 2
color = Color(0, 0, 0, 0.392157)

[node name="Powerups" type="Label" parent="Control"]
layout_mode = 2
offset_left = 3.0
offset_top = 26.0
offset_right = 214.0
offset_bottom = 82.0
theme_override_font_sizes/font_size = 55
text = "Powerups"

[node name="LevelDisplay" type="Label" parent="Control"]
layout_mode = 2
offset_left = 385.0
offset_top = -2.0
offset_right = 545.0
offset_bottom = 104.0
theme_override_font_sizes/font_size = 55
text = "Level âˆž"
vertical_alignment = 1

[node name="PowerupDisplay" type="VBoxContainer" parent="Control"]
layout_mode = 0
offset_left = 234.0
offset_top = 1.0
offset_right = 328.0
offset_bottom = 105.0

[node name="Row1" type="HBoxContainer" parent="Control/PowerupDisplay"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="Speed" type="TextureRect" parent="Control/PowerupDisplay/Row1"]
material = SubResource("ShaderMaterial_e3pce")
layout_mode = 2
texture = ExtResource("3_a4wg4")

[node name="Label" type="Label" parent="Control/PowerupDisplay/Row1/Speed"]
layout_mode = 0
offset_left = 36.0
offset_right = 76.0
offset_bottom = 31.0
text = "0"

[node name="StunTime" type="TextureRect" parent="Control/PowerupDisplay/Row1"]
material = SubResource("ShaderMaterial_65qlr")
layout_mode = 2
texture = ExtResource("4_65qlr")

[node name="Label" type="Label" parent="Control/PowerupDisplay/Row1/StunTime"]
layout_mode = 0
offset_left = 36.0
offset_right = 76.0
offset_bottom = 31.0
text = "0"

[node name="Row2" type="HBoxContainer" parent="Control/PowerupDisplay"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="LassoReach" type="TextureRect" parent="Control/PowerupDisplay/Row2"]
material = SubResource("ShaderMaterial_38tne")
layout_mode = 2
texture = ExtResource("5_e3pce")

[node name="Label" type="Label" parent="Control/PowerupDisplay/Row2/LassoReach"]
layout_mode = 0
offset_left = 36.0
offset_right = 76.0
offset_bottom = 31.0
text = "0"

[node name="LassoSize" type="TextureRect" parent="Control/PowerupDisplay/Row2"]
material = SubResource("ShaderMaterial_a3q0n")
layout_mode = 2
texture = ExtResource("6_38tne")

[node name="Label" type="Label" parent="Control/PowerupDisplay/Row2/LassoSize"]
layout_mode = 0
offset_left = 36.0
offset_right = 76.0
offset_bottom = 31.0
text = "0"

[node name="Row3" type="HBoxContainer" parent="Control/PowerupDisplay"]
layout_mode = 2
theme_override_constants/separation = 30
alignment = 1

[node name="KickPower" type="TextureRect" parent="Control/PowerupDisplay/Row3"]
material = SubResource("ShaderMaterial_kffq2")
layout_mode = 2
texture = ExtResource("7_a3q0n")

[node name="Label" type="Label" parent="Control/PowerupDisplay/Row3/KickPower"]
layout_mode = 0
offset_left = 36.0
offset_right = 76.0
offset_bottom = 31.0
text = "0"

[node name="TimeLeft" type="Label" parent="Control"]
layout_mode = 0
offset_left = 1400.0
offset_top = 23.0
offset_right = 1879.0
offset_bottom = 85.0
pivot_offset = Vector2(239.5, 31)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 55
text = "Time Left: "

[node name="AnimMarker" type="Control" parent="Control"]
anchors_preset = 0
offset_left = 1601.0
offset_top = 126.0
offset_right = 1601.0
offset_bottom = 126.0

[node name="LassoBar" type="HSlider" parent="Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -400.0
offset_top = 38.0
offset_bottom = 54.0
grow_horizontal = 2
scale = Vector2(2, 2)
theme_override_icons/grabber_disabled = SubResource("ImageTexture_xsw5n")
theme_override_icons/tick = SubResource("ImageTexture_74lpp")
theme_override_styles/grabber_area = SubResource("StyleBoxTexture_7tk7y")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxTexture_xsw5n")
value = 100.0
editable = false
scrollable = false
tick_count = 2
ticks_on_borders = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Control/TimeLeft")
libraries = {
&"": SubResource("AnimationLibrary_7tk7y")
}

[node name="ColorRect" type="ColorRect" parent="."]
z_index = -1
offset_left = 560.0
offset_top = 43.0
offset_right = 1360.0
offset_bottom = 65.0
color = Color(0, 0, 0, 0.278431)
